--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
         </tbody>
       </table>
       <h2 class="page-heading">
-        <%= "#{@user.nickname}さんのプロトタイプ"%>
+        <%= "#{@user.nickname}さんのレシピ"%>
       </h2>
       <div class="user__card">
         <%= render partial: 'tweets/tweet', collection: @user.tweets %>
