--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -37,7 +37,7 @@ a {
 /* ヘッダー */
 
 .header {
-  background-color: #f1f8fe;
+  background-color: #f1d1ee;
   margin-bottom: 48px;
   padding: 20px 0;
 
@@ -58,7 +58,7 @@ a {
   display: inline-block;
   padding: 0.4em 1.6em;
   font-size: 0.8em;
-  color: #87CEFA;
+  color: #3453e9;
   text-decoration: none;
   user-select: none;
   border: 1px #87CEFA solid;
